# MidiC

./: CMakeLists.txt  README.md
data/test/: beatRhythm.json  correctness.json  playback.json  test.mid
include/: ScoreLoc.h
src/: ScoreLoc.cpp  main.cpp
